service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chats-service
spec:
  type: ClusterIP
  selector:
    app: chats
  ports:
    - port: 5200
      targetPort: 5200
